--- a/pom.xml
+++ b/pom.xml
@@ -52,8 +52,22 @@
             <artifactId>spring-boot-starter-security</artifactId>
             <version>2.1.1.RELEASE</version>
         </dependency>
-
-    </dependencies>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>0.9.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava-collections</artifactId>
+			<version>r03</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
