course up to get balance implemented

--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
 		<version>2.1.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.learning</groupId>
-	<artifactId>spring</artifactId>
+	<groupId>com.mfinancials</groupId>
+	<artifactId>tradingengine</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>spring</name>
 	<description>Demo project for Spring Boot</description>
